# lexspec

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: constraints.yaml  model.yaml  model_gemma4.yaml  model_qwen36.yaml  prompts.yaml
experiments/: eval_100_status.sh  run_eval_100.sh  run_eval_100_tmux.sh  run_eval_500.sh  run_pipeline.sh  step_01_build_corpus.py  step_02_annotate_gold.py  step_03_extract_baseline.py  step_04_extract_dep.py  step_05_extract_reflexion.py  step_06_evaluate.py  step_07_analyze_errors.py
scripts/: audit_gold_500.py  build_gold_100_from_500.py  build_gold_500.py  curate_batch_3.py  curate_batch_bcd_2.py  curate_batch_bcd_4.py  curate_gold_500.py  eliminate_weak_clauses_500.py  final_pass_bcd.py  finalize_gold_500.py  fix_annotations_500.py  fix_batch_bcd_3.py  fix_batch_bcd_5.py  fix_quality_20pct_500.py  merge_bcd_fixes.py  polish_gold_500.py  redetect_phenomena_500.py  remediate_pool_swaps.py  run_remediation_pipeline.sh  sync_model_triplets_500.py  validate_quality_95.py  validate_testset_500.py
src/: __init__.py
src/annotation/: __init__.py  cli_utils.py  commands.py  consensus.py  disagreement_io.py  disagreement_logger.py  field_helpers.py  llm_annotator.py  merge_engine.py  normalization.py  prompts.py  response_parser.py  reviewer.py  statistics.py  task_pool.py  triplet_coercion.py
src/corpus/: __init__.py  clause_processor.py  cuad_loader.py  phenomena_detector.py  selection.py
tests/: test_ablation_dep.py  test_alignment.py  test_config.py  test_eval_orchestrator.py  test_reflexion.py  test_schema.py
(+91 files in other folders)
